<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_dsp_title">
        <CheckBoxPreference
            android:title="@string/pref_dsp_enable"
            android:key="dsp.bluetooth.compression.enable"
            android:summaryOn="@string/pref_dsp_summary_on"
            android:summaryOff="@string/pref_dsp_summary_off"
            android:disableDependentsState="false" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_effect_title"
            android:entries="@array/compression_modes"
            android:dialogTitle="@string/dialog_effect"
            android:key="dsp.bluetooth.compression.mode"
            android:defaultValue="5"
            android:entryValues="@array/compression_modes_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_bassboost_title">
        <CheckBoxPreference
            android:title="@string/pref_bassboost_enable"
            android:disableDependentsState="false"
            android:key="dsp.bluetooth.bass.enable"
            android:summaryOn="@string/pref_bassboost_summary_on"
            android:summaryOff="@string/pref_bassboost_summary_off" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_effect_title"
            android:entries="@array/bassboost_modes"
            android:dialogTitle="@string/dialog_effect"
            android:key="dsp.bluetooth.bass.mode"
            android:defaultValue="0"
            android:entryValues="@array/bassboost_modes_values" />
        <com.bel.android.dspmanager.preference.SummariedTextPreference
            android:title="@string/pref_bassboost_freq_title"
            android:defaultValue="55"
            android:dialogTitle="@string/pref_bassboost_freq"
            android:inputType="number"
            android:key="dsp.bluetooth.bassboost.freq" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_equalizer_title">
        <CheckBoxPreference
            android:title="@string/pref_equalizer_enable"
            android:disableDependentsState="false"
            android:key="dsp.bluetooth.tone.enable"
            android:summaryOn="@string/pref_equalizer_summary_on"
            android:summaryOff="@string/pref_equalizer_summary_off" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_equalizer_preset_title"
            android:entries="@array/equalizer_preset_modes"
            android:dialogTitle="@string/pref_equalizer_preset_title"
            android:key="dsp.bluetooth.tone.eq.type"
            android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0"
            android:entryValues="@array/equalizer_preset_values" />
        <com.bel.android.dspmanager.preference.EqualizerPreference
            android:key="dsp.bluetooth.tone.eq.values" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_equalizer_loudness_title"
            android:entries="@array/equalizer_loudness_modes"
            android:dialogTitle="@string/pref_equalizer_loudness_title"
            android:key="dsp.bluetooth.tone.loudness"
            android:defaultValue="10000"
            android:entryValues="@array/equalizer_loudness_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_headset_virtual_title">
        <CheckBoxPreference
            android:title="@string/pref_headset_virtual_enable"
            android:key="dsp.bluetooth.headphone.enable"
            android:disableDependentsState="false"
            android:summaryOn="@string/pref_headset_virtual_summary_on"
            android:summaryOff="@string/pref_headset_virtual_summary_off" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_room_title"
            android:dialogTitle="@string/dialog_room"
            android:key="dsp.bluetooth.headphone.mode"
            android:entryValues="@array/headphone_modes_values"
            android:defaultValue="0"
            android:entries="@array/headphone_modes" />
    </PreferenceCategory>

</PreferenceScreen>
