<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_bassboost_title">
        <CheckBoxPreference
            android:title="@string/pref_bassboost_enable"
            android:disableDependentsState="false"
            android:key="dsp.speaker.bass.enable"
            android:summaryOn="@string/pref_bassboost_summary_on"
            android:summaryOff="@string/pref_bassboost_summary_off" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_effect_title"
            android:entries="@array/bassboost_modes"
            android:dialogTitle="@string/dialog_effect"
            android:key="dsp.speaker.bass.mode"
            android:defaultValue="0"
            android:entryValues="@array/bassboost_modes_values" />
        <com.bel.android.dspmanager.preference.SummariedTextPreference
            android:title="@string/pref_bassboost_freq_title"
            android:defaultValue="55"
            android:dialogTitle="@string/pref_bassboost_freq"
            android:inputType="number"
            android:key="dsp.speaker.bassboost.freq" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_equalizer_title">
        <CheckBoxPreference
            android:title="@string/pref_equalizer_enable"
            android:disableDependentsState="false"
            android:key="dsp.speaker.tone.enable"
            android:summaryOn="@string/pref_equalizer_summary_on"
            android:summaryOff="@string/pref_equalizer_summary_off" />
        <com.bel.android.dspmanager.preference.SummariedListPreference
            android:title="@string/pref_equalizer_preset_title"
            android:entries="@array/equalizer_preset_modes"
            android:dialogTitle="@string/pref_equalizer_preset_title"
            android:key="dsp.speaker.tone.eq"
            android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0"
            android:entryValues="@array/equalizer_preset_values" />
        <com.bel.android.dspmanager.preference.EqualizerPreference android:key="dsp.tone.eq.custom" />
    </PreferenceCategory>
</PreferenceScreen>
